--- a/packages/boundingclientrect-ref/package.json
+++ b/packages/boundingclientrect-ref/package.json
@@ -9,7 +9,8 @@
   "homepage": "https://react-hooks.org/docs/use-boundingclientrect-ref",
   "repository": {
     "type": "git",
-    "url": "https://github.com/imbhargav5/rooks.git"
+    "url": "https://github.com/imbhargav5/rooks.git",
+    "directory": "packages/boundingclientrect-ref"
   },
   "scripts": {
     "lint": "sh ../../scripts/lint.sh",
