--- a/packages/on-window-resize/package.json
+++ b/packages/on-window-resize/package.json
@@ -8,7 +8,8 @@
   "homepage": "https://react-hooks.org/docs/use-on-window-resize",
   "repository": {
     "type": "git",
-    "url": "https://github.com/imbhargav5/rooks.git"
+    "url": "https://github.com/imbhargav5/rooks.git",
+    "directory": "packages/on-window-resize"
   },
   "scripts": {
     "lint": "sh ../../scripts/lint.sh",
