--- a/packages/previous/package.json
+++ b/packages/previous/package.json
@@ -8,7 +8,8 @@
   "homepage": "https://react-hooks.org/docs/use-previous",
   "repository": {
     "type": "git",
-    "url": "https://github.com/imbhargav5/rooks.git"
+    "url": "https://github.com/imbhargav5/rooks.git",
+    "directory": "packages/previous"
   },
   "scripts": {
     "lint": "sh ../../scripts/lint.sh",
