--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -8,7 +8,8 @@
   "homepage": "https://react-hooks.org/docs/use-select",
   "repository": {
     "type": "git",
-    "url": "https://github.com/imbhargav5/rooks.git"
+    "url": "https://github.com/imbhargav5/rooks.git",
+    "directory": "packages/select"
   },
   "scripts": {
     "lint": "sh ../../scripts/lint.sh",
