--- a/template/package.json
+++ b/template/package.json
@@ -9,7 +9,8 @@
   "homepage": "https://react-hooks.org/docs/%packageName%",
   "repository": {
     "type": "git",
-    "url": "https://github.com/imbhargav5/rooks.git"
+    "url": "https://github.com/imbhargav5/rooks.git",
+    "directory": "packages/%directoryName%"
   },
   "scripts": {
     
