--- a/packages/rooks/package.json
+++ b/packages/rooks/package.json
@@ -5,9 +5,9 @@
   "author": "Bhargav Ponnapalli <bhargavponnapalli.5@gmail.com> (https://github.com/imbhargav5)",
   "homepage": "https://github.com/imbhargav5/rooks#readme",
   "license": "MIT",
-  "main": "lib/rooks.browser.cjs.js",
-  "jsnext:main": "lib/rooks.browser.esm.js",
-  "module": "lib/rooks.browser.esm.js",
+  "main": "lib/rooks.js",
+  "jsnext:main": "lib/rooks.esm.js",
+  "module": "lib/rooks.esm.js",
   "types": "lib/types/index.d.ts",
   "repository": {
     "type": "git",
