--- a/packages/docusaurus/package.json
+++ b/packages/docusaurus/package.json
@@ -17,8 +17,8 @@
     "serve": "docusaurus serve"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-alpha.66",
-    "@docusaurus/preset-classic": "2.0.0-alpha.66",
+    "@docusaurus/core": "^2.0.0-alpha.69",
+    "@docusaurus/preset-classic": "^2.0.0-alpha.69",
     "@widgetbot/embed-api": "^1.1.3",
     "@widgetbot/react-embed": "^1.3.0",
     "classnames": "^2.2.6",
