--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-rooks",
-  "version": "4.0.0-canary.23",
+  "version": "4.0.0",
   "description": "Eslint config for rooks.",
   "keywords": [
     "eslint",
