--- a/packages/mouse/package.json
+++ b/packages/mouse/package.json
@@ -27,7 +27,7 @@
     "mouse",
     "mouse hook"
   ],
-  "version": "4.0.0-canary.23",
+  "version": "4.0.0",
   "_id": "@rooks/use-mouse@",
   "publishConfig": {
     "access": "public"
