--- a/packages/navigator-language/package.json
+++ b/packages/navigator-language/package.json
@@ -27,7 +27,7 @@
     "navigator language",
     "navigator language hook"
   ],
-  "version": "4.0.0-canary.23",
+  "version": "4.0.0",
   "_id": "@rooks/use-navigator-language@",
   "publishConfig": {
     "access": "public"
