--- a/packages/outside-click/package.json
+++ b/packages/outside-click/package.json
@@ -27,7 +27,7 @@
     "hooks",
     "ref outside click"
   ],
-  "version": "4.0.0-canary.23",
+  "version": "4.0.0",
   "_id": "@rooks/use-outside-click@",
   "publishConfig": {
     "access": "public"
