--- a/packages/raf/package.json
+++ b/packages/raf/package.json
@@ -27,7 +27,7 @@
     "hooks",
     "raf"
   ],
-  "version": "4.0.0-canary.23",
+  "version": "4.0.0",
   "_id": "@rooks/use-raf@",
   "publishConfig": {
     "access": "public"
