--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -27,7 +27,7 @@
     "hooks",
     "list"
   ],
-  "version": "4.0.0-canary.23",
+  "version": "4.0.0",
   "_id": "@rooks/use-select@",
   "publishConfig": {
     "access": "public"
