--- a/packages/sessionstorage/package.json
+++ b/packages/sessionstorage/package.json
@@ -26,7 +26,7 @@
     "rooks",
     "hooks"
   ],
-  "version": "4.0.0-canary.23",
+  "version": "4.0.0",
   "_id": "@rooks/use-sessionstorage@",
   "publishConfig": {
     "access": "public"
