--- a/packages/undo-state/package.json
+++ b/packages/undo-state/package.json
@@ -30,7 +30,7 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "version": "4.0.0-canary.23",
+  "version": "4.0.0",
   "_id": "@rooks/use-undo-state@",
   "publishConfig": {
     "access": "public"
