--- a/packages/visibility-sensor/package.json
+++ b/packages/visibility-sensor/package.json
@@ -27,7 +27,7 @@
     "rooks",
     "visibility sensor hook"
   ],
-  "version": "4.0.0-canary.23",
+  "version": "4.0.0",
   "_id": "@rooks/use-visibility-sensor@",
   "publishConfig": {
     "access": "public"
