--- a/packages/window-size/package.json
+++ b/packages/window-size/package.json
@@ -27,7 +27,7 @@
     "window size",
     "window size hook"
   ],
-  "version": "4.0.0-canary.23",
+  "version": "4.0.0",
   "_id": "@rooks/use-window-size@",
   "jest": {
     "globals": {
