--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -33,5 +33,6 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213"
+  "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213",
+  "license": "MIT"
 }
