--- a/packages/debounce/package.json
+++ b/packages/debounce/package.json
@@ -38,5 +38,6 @@
   "dependencies": {
     "lodash.debounce": "4.0.8"
   },
-  "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213"
+  "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213",
+  "license": "MIT"
 }
