--- a/packages/raf/package.json
+++ b/packages/raf/package.json
@@ -35,5 +35,6 @@
   "dependencies": {
     "raf": "3.4.1"
   },
-  "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213"
+  "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213",
+  "license": "MIT"
 }
