--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -79,7 +79,7 @@ jobs:
       - name: Commit docusaurus
         if: steps.tag_is_stable.outputs.result == 1
         run: |
-          git add packages/docusaurus
+          git add .
           git -c user.name="imbhargav5" -c user.email="imbhargav5@users.noreply.github.com" \
             commit -m "Update ${{ steps.tags.outputs.new }} docusaurus [skip ci]" --no-verify --quiet
           git push "https://imbhargav5:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git" master      
