--- a/packages/did-mount/package.json
+++ b/packages/did-mount/package.json
@@ -28,7 +28,7 @@
     "componentDidMount",
     "lifecycle"
   ],
-  "version": "4.0.2",
+  "version": "4.1.0-canary.0",
   "_id": "@rooks/use-did-mount@",
   "publishConfig": {
     "access": "public"
