--- a/packages/input/package.json
+++ b/packages/input/package.json
@@ -26,7 +26,7 @@
     "rooks",
     "input hook"
   ],
-  "version": "4.0.2",
+  "version": "4.1.0-canary.0",
   "_id": "@rooks/use-input@",
   "publishConfig": {
     "access": "public"
