--- a/packages/throttle/package.json
+++ b/packages/throttle/package.json
@@ -30,7 +30,7 @@
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
-  "version": "4.0.2",
+  "version": "4.1.0-canary.0",
   "_id": "@rooks/use-throttle@",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
