--- a/packages/countdown/package.json
+++ b/packages/countdown/package.json
@@ -29,7 +29,7 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "version": "4.1.0-canary.2",
+  "version": "4.1.0",
   "_id": "@rooks/use-countdown@",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
