--- a/packages/debounce/package.json
+++ b/packages/debounce/package.json
@@ -27,7 +27,7 @@
     "rooks",
     "react-hooks.org"
   ],
-  "version": "4.1.0-canary.2",
+  "version": "4.1.0",
   "_id": "@rooks/use-debounce@",
   "publishConfig": {
     "access": "public"
