--- a/packages/multi-selectable-list/package.json
+++ b/packages/multi-selectable-list/package.json
@@ -32,7 +32,7 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "version": "4.1.0-canary.2",
+  "version": "4.1.0",
   "_id": "@rooks/use-multi-selectable-list@",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
