--- a/packages/mutation-observer/package.json
+++ b/packages/mutation-observer/package.json
@@ -29,7 +29,7 @@
     "mutation observer",
     "mutation observer hook"
   ],
-  "version": "4.1.0-canary.2",
+  "version": "4.1.0",
   "_id": "@rooks/use-mutation-observer@",
   "publishConfig": {
     "access": "public"
