--- a/packages/on-window-resize/package.json
+++ b/packages/on-window-resize/package.json
@@ -27,7 +27,7 @@
     "window",
     "resize"
   ],
-  "version": "4.1.0-canary.2",
+  "version": "4.1.0",
   "publishConfig": {
     "access": "public"
   },
