--- a/packages/outside-click/package.json
+++ b/packages/outside-click/package.json
@@ -27,7 +27,7 @@
     "hooks",
     "ref outside click"
   ],
-  "version": "4.1.0-canary.2",
+  "version": "4.1.0",
   "_id": "@rooks/use-outside-click@",
   "publishConfig": {
     "access": "public"
