--- a/packages/previous/package.json
+++ b/packages/previous/package.json
@@ -25,7 +25,7 @@
     "rooks",
     "react-hooks.org"
   ],
-  "version": "4.1.0-canary.2",
+  "version": "4.1.0",
   "_id": "@rooks/use-previous@",
   "publishConfig": {
     "access": "public"
