--- a/packages/timeout-when/package.json
+++ b/packages/timeout-when/package.json
@@ -2,7 +2,7 @@
   "main": "lib/index.js",
   "jsnext:main": "lib/index.esm.js",
   "module": "lib/index.esm.js",
-  "types": "dist/types/timeout-when/index.d.ts",
+  "types": "lib/types/index.d.ts",
   "license": "MIT",
   "description": "Takes a callback and fires it when a condition is true",
   "name": "@rooks/use-timeout-when",
