--- a/template/package.json
+++ b/template/package.json
@@ -2,7 +2,7 @@
   "main": "lib/index.js",
   "jsnext:main": "lib/index.esm.js",
   "module": "lib/index.esm.js",
-  "types": "dist/types/%directoryName%/index.d.ts",
+  "types": "lib/types/index.d.ts",
   "license": "MIT",
   "description": "%description%",
   "name": "@rooks/%packageName%",
