--- a/packages/boundingclientrect/package.json
+++ b/packages/boundingclientrect/package.json
@@ -27,7 +27,7 @@
     "rooks",
     "react-hooks.org"
   ],
-  "version": "4.1.0",
+  "version": "4.1.1-canary.0",
   "_id": "@rooks/use-boundingclientrect@",
   "publishConfig": {
     "access": "public"
