--- a/packages/key-ref/package.json
+++ b/packages/key-ref/package.json
@@ -32,7 +32,7 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "version": "4.1.0",
+  "version": "4.1.1-canary.0",
   "_id": "@rooks/use-key-ref@",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
