--- a/packages/timeout/package.json
+++ b/packages/timeout/package.json
@@ -27,7 +27,7 @@
     "timeout",
     "timeout hook"
   ],
-  "version": "4.1.0",
+  "version": "4.1.1-canary.0",
   "_id": "@rooks/use-timeout@",
   "publishConfig": {
     "access": "public"
