--- a/packages/did-update/package.json
+++ b/packages/did-update/package.json
@@ -28,7 +28,7 @@
     "rooks",
     "react-hooks.org"
   ],
-  "version": "4.1.1-canary.0",
+  "version": "4.1.1",
   "_id": "@rooks/use-did-update@",
   "publishConfig": {
     "access": "public"
