--- a/packages/docusaurus/package.json
+++ b/packages/docusaurus/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docusaurus",
-  "version": "4.1.1-canary.0",
+  "version": "4.1.1",
   "private": true,
   "scripts": {
     "examples": "docusaurus-examples",
