--- a/packages/localstorage/package.json
+++ b/packages/localstorage/package.json
@@ -26,7 +26,7 @@
     "rooks",
     "hooks"
   ],
-  "version": "4.1.1-canary.0",
+  "version": "4.1.1",
   "_id": "@rooks/use-localstorage@",
   "publishConfig": {
     "access": "public"
