--- a/packages/merge-refs/package.json
+++ b/packages/merge-refs/package.json
@@ -31,7 +31,7 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "version": "4.1.1-canary.0",
+  "version": "4.1.1",
   "_id": "@rooks/use-merge-refs@",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
