--- a/packages/on-window-scroll/package.json
+++ b/packages/on-window-scroll/package.json
@@ -27,7 +27,7 @@
     "window",
     "scroll"
   ],
-  "version": "4.1.1-canary.0",
+  "version": "4.1.1",
   "publishConfig": {
     "access": "public"
   },
