--- a/packages/outside-click-ref/package.json
+++ b/packages/outside-click-ref/package.json
@@ -29,7 +29,7 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "version": "4.1.1-canary.0",
+  "version": "4.1.1",
   "_id": "@rooks/use-outside-click-ref@",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
