--- a/packages/toggle/package.json
+++ b/packages/toggle/package.json
@@ -27,7 +27,7 @@
     "rooks",
     "toggle hook"
   ],
-  "version": "4.1.1-canary.0",
+  "version": "4.1.1",
   "_id": "@rooks/use-toggle@",
   "publishConfig": {
     "access": "public"
