--- a/packages/interval/package.json
+++ b/packages/interval/package.json
@@ -27,7 +27,7 @@
     "setInterval",
     "interval"
   ],
-  "version": "4.2.0",
+  "version": "4.2.1-canary.0",
   "_id": "@rooks/use-interval@",
   "publishConfig": {
     "access": "public"
