--- a/packages/navigator-language/package.json
+++ b/packages/navigator-language/package.json
@@ -27,7 +27,7 @@
     "navigator language",
     "navigator language hook"
   ],
-  "version": "4.2.0",
+  "version": "4.2.1-canary.0",
   "_id": "@rooks/use-navigator-language@",
   "publishConfig": {
     "access": "public"
