--- a/packages/previous/package.json
+++ b/packages/previous/package.json
@@ -25,7 +25,7 @@
     "rooks",
     "react-hooks.org"
   ],
-  "version": "4.2.0",
+  "version": "4.2.1-canary.0",
   "_id": "@rooks/use-previous@",
   "publishConfig": {
     "access": "public"
