--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -27,7 +27,7 @@
     "hooks",
     "list"
   ],
-  "version": "4.2.0",
+  "version": "4.2.1-canary.0",
   "_id": "@rooks/use-select@",
   "publishConfig": {
     "access": "public"
