--- a/packages/counter/package.json
+++ b/packages/counter/package.json
@@ -27,7 +27,7 @@
     "react-hooks.org",
     "counter hook"
   ],
-  "version": "4.2.1-canary.3",
+  "version": "4.3.0",
   "publishConfig": {
     "access": "public"
   },
