--- a/packages/docusaurus/package.json
+++ b/packages/docusaurus/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docusaurus",
-  "version": "4.2.1-canary.3",
+  "version": "4.3.0",
   "private": true,
   "scripts": {
     "examples": "docusaurus-examples",
