--- a/packages/fullscreen/package.json
+++ b/packages/fullscreen/package.json
@@ -32,7 +32,7 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "version": "4.2.1-canary.3",
+  "version": "4.3.0",
   "_id": "@rooks/use-fullscreen@",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
