--- a/packages/geolocation/package.json
+++ b/packages/geolocation/package.json
@@ -29,7 +29,7 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "version": "4.2.1-canary.3",
+  "version": "4.3.0",
   "_id": "@rooks/use-geolocation@",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
