--- a/packages/on-window-scroll/package.json
+++ b/packages/on-window-scroll/package.json
@@ -27,7 +27,7 @@
     "window",
     "scroll"
   ],
-  "version": "4.2.1-canary.3",
+  "version": "4.3.0",
   "publishConfig": {
     "access": "public"
   },
