--- a/packages/raf/package.json
+++ b/packages/raf/package.json
@@ -27,7 +27,7 @@
     "hooks",
     "raf"
   ],
-  "version": "4.2.1-canary.3",
+  "version": "4.3.0",
   "_id": "@rooks/use-raf@",
   "publishConfig": {
     "access": "public"
