docs: add zeritte as a contributor (#350)
* docs: update README.md [skip ci]

* docs: update .all-contributorsrc [skip ci]

Co-authored-by: allcontributors[bot] <46447321+allcontributors[bot]@users.noreply.github.com>

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -175,8 +175,18 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "zeritte",
+      "name": "zeritte",
+      "avatar_url": "https://avatars.githubusercontent.com/u/35241861?v=4",
+      "profile": "https://github.com/zeritte",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
-  "commitConvention": "none"
+  "commitConvention": "none",
+  "skipCi": true
 }
