docs: add Armanio as a contributor (#356)
* docs: update README.md [skip ci]

* docs: update .all-contributorsrc [skip ci]

* docs: update README.md [skip ci]

* docs: update .all-contributorsrc [skip ci]

Co-authored-by: allcontributors[bot] <46447321+allcontributors[bot]@users.noreply.github.com>
Co-authored-by: Bhargav Ponnapalli <imbhargav5@gmail.com>

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -177,6 +177,15 @@
       ]
     },
     {
+      "login": "Armanio",
+      "name": "Arman",
+      "avatar_url": "https://avatars.githubusercontent.com/u/3195714?v=4",
+      "profile": "http://arman.io",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
       "login": "zeritte",
       "name": "zeritte",
       "avatar_url": "https://avatars.githubusercontent.com/u/35241861?v=4",
