docs: add calthejuggler as a contributor (#357)
* docs: update README.md [skip ci]

* docs: update .all-contributorsrc [skip ci]

Co-authored-by: allcontributors[bot] <46447321+allcontributors[bot]@users.noreply.github.com>

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -193,6 +193,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "calthejuggler",
+      "name": "Cal Courtney",
+      "avatar_url": "https://avatars.githubusercontent.com/u/30095183?v=4",
+      "profile": "https://www.calcourtney.net",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
