docs: add AdrienLemaire as a contributor (#362)
* docs: update README.md [skip ci]

* docs: update .all-contributorsrc [skip ci]

Co-authored-by: allcontributors[bot] <46447321+allcontributors[bot]@users.noreply.github.com>

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -220,6 +220,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "AdrienLemaire",
+      "name": "Adrien Lemaire",
+      "avatar_url": "https://avatars.githubusercontent.com/u/260983?v=4",
+      "profile": "https://www.linkedin.com/in/adrienlemaire/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
