--- a/packages/intersection-observer-ref/package.json
+++ b/packages/intersection-observer-ref/package.json
@@ -29,7 +29,7 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "version": "4.8.1",
+  "version": "4.9.0-canary.0",
   "_id": "@rooks/use-intersection-observer-ref@",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
