--- a/packages/online/package.json
+++ b/packages/online/package.json
@@ -27,7 +27,7 @@
     "online status",
     "online status hook"
   ],
-  "version": "4.8.1",
+  "version": "4.9.0-canary.0",
   "_id": "@rooks/use-online@",
   "publishConfig": {
     "access": "public"
