--- a/packages/sessionstorage-state/package.json
+++ b/packages/sessionstorage-state/package.json
@@ -31,7 +31,7 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "version": "4.8.1",
+  "version": "4.9.0-canary.0",
   "_id": "@rooks/use-sessionstorage-state@",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
