--- a/packages/window-size/package.json
+++ b/packages/window-size/package.json
@@ -27,7 +27,7 @@
     "window size",
     "window size hook"
   ],
-  "version": "4.8.1",
+  "version": "4.9.0-canary.0",
   "_id": "@rooks/use-window-size@",
   "jest": {
     "globals": {
