--- a/packages/counter/package.json
+++ b/packages/counter/package.json
@@ -27,7 +27,7 @@
     "react-hooks.org",
     "counter hook"
   ],
-  "version": "4.9.0-canary.0",
+  "version": "4.9.0",
   "publishConfig": {
     "access": "public"
   },
