--- a/packages/effect-once-when/package.json
+++ b/packages/effect-once-when/package.json
@@ -29,7 +29,7 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "version": "4.9.0-canary.0",
+  "version": "4.9.0",
   "_id": "@rooks/use-effect-once-when@",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
