--- a/packages/mouse/package.json
+++ b/packages/mouse/package.json
@@ -27,7 +27,7 @@
     "mouse",
     "mouse hook"
   ],
-  "version": "4.9.0-canary.0",
+  "version": "4.9.0",
   "_id": "@rooks/use-mouse@",
   "publishConfig": {
     "access": "public"
