--- a/packages/previous-different/package.json
+++ b/packages/previous-different/package.json
@@ -29,7 +29,7 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "version": "4.9.0-canary.0",
+  "version": "4.9.0",
   "_id": "@rooks/use-previous-different@",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
