--- a/packages/update-effect/package.json
+++ b/packages/update-effect/package.json
@@ -29,7 +29,7 @@
     "rooks",
     "react-hooks.org"
   ],
-  "version": "4.9.0-canary.0",
+  "version": "4.9.0",
   "_id": "@rooks/use-update-effect@",
   "publishConfig": {
     "access": "public"
