docs: add mrvisser as a contributor (#416)
* docs: update README.md [skip ci]

* docs: update .all-contributorsrc [skip ci]

Co-authored-by: allcontributors[bot] <46447321+allcontributors[bot]@users.noreply.github.com>

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -247,6 +247,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "mrvisser",
+      "name": "Branden Visser",
+      "avatar_url": "https://avatars.githubusercontent.com/u/102265?v=4",
+      "profile": "http://mrvisser.ca",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
