--- a/packages/counter/package.json
+++ b/packages/counter/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://react-hooks.org/docs/use-counter",
   "repository": {
     "type": "git",
-    "url": "https://github.com/imbhargav5/rooks.git",
+    "url": "git+https://github.com/imbhargav5/rooks.git",
     "directory": "packages/counter"
   },
   "scripts": {
@@ -35,5 +35,11 @@
     "react": ">=16.8.0"
   },
   "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213",
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/imbhargav5/rooks/issues"
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "@rooks/use-counter@4.11.0",
+  "private": true
 }
