--- a/packages/update-effect/package.json
+++ b/packages/update-effect/package.json
@@ -9,7 +9,7 @@
   "homepage": "https://react-hooks.org/docs/use-update-effect",
   "repository": {
     "type": "git",
-    "url": "https://github.com/imbhargav5/rooks.git",
+    "url": "git+https://github.com/imbhargav5/rooks.git",
     "directory": "packages/update-effect"
   },
   "scripts": {
@@ -30,7 +30,7 @@
     "react-hooks.org"
   ],
   "version": "4.11.0",
-  "_id": "@rooks/use-update-effect@",
+  "_id": "@rooks/use-update-effect@4.11.0",
   "publishConfig": {
     "access": "public"
   },
@@ -38,5 +38,10 @@
     "react": ">=16.8.0"
   },
   "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213",
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/imbhargav5/rooks/issues"
+  },
+  "readme": "ERROR: No README data found!",
+  "private": true
 }
