--- a/packages/did-update/package.json
+++ b/packages/did-update/package.json
@@ -9,7 +9,7 @@
   "homepage": "https://react-hooks.org/docs/use-did-update",
   "repository": {
     "type": "git",
-    "url": "https://github.com/imbhargav5/rooks.git",
+    "url": "git+https://github.com/imbhargav5/rooks.git",
     "directory": "packages/did-update"
   },
   "scripts": {
@@ -29,7 +29,7 @@
     "react-hooks.org"
   ],
   "version": "4.11.0",
-  "_id": "@rooks/use-did-update@",
+  "_id": "@rooks/use-did-update@4.11.0",
   "publishConfig": {
     "access": "public"
   },
@@ -37,5 +37,10 @@
     "react": ">=16.8.0"
   },
   "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213",
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/imbhargav5/rooks/issues"
+  },
+  "readme": "ERROR: No README data found!",
+  "private": true
 }
