--- a/packages/multi-selectable-list/package.json
+++ b/packages/multi-selectable-list/package.json
@@ -9,7 +9,7 @@
   "homepage": "https://react-hooks.org/docs/use-multi-selectable-list",
   "repository": {
     "type": "git",
-    "url": "https://github.com/imbhargav5/rooks.git",
+    "url": "git+https://github.com/imbhargav5/rooks.git",
     "directory": "packages/multi-selectable-list"
   },
   "scripts": {
@@ -33,9 +33,13 @@
     "react": ">=16.8.0"
   },
   "version": "4.11.0",
-  "_id": "@rooks/use-multi-selectable-list@",
+  "_id": "@rooks/use-multi-selectable-list@4.11.0",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/imbhargav5/rooks/issues"
+  },
+  "private": true
 }
