--- a/packages/outside-click-ref/package.json
+++ b/packages/outside-click-ref/package.json
@@ -9,7 +9,7 @@
   "homepage": "https://react-hooks.org/docs/use-outside-click-ref",
   "repository": {
     "type": "git",
-    "url": "https://github.com/imbhargav5/rooks.git",
+    "url": "git+https://github.com/imbhargav5/rooks.git",
     "directory": "packages/outside-click-ref"
   },
   "scripts": {
@@ -30,9 +30,13 @@
     "react": ">=16.8.0"
   },
   "version": "4.11.0",
-  "_id": "@rooks/use-outside-click-ref@",
+  "_id": "@rooks/use-outside-click-ref@4.11.0",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/imbhargav5/rooks/issues"
+  },
+  "private": true
 }
