--- a/packages/previous/package.json
+++ b/packages/previous/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://react-hooks.org/docs/use-previous",
   "repository": {
     "type": "git",
-    "url": "https://github.com/imbhargav5/rooks.git",
+    "url": "git+https://github.com/imbhargav5/rooks.git",
     "directory": "packages/previous"
   },
   "scripts": {
@@ -26,10 +26,15 @@
     "react-hooks.org"
   ],
   "version": "4.11.0",
-  "_id": "@rooks/use-previous@",
+  "_id": "@rooks/use-previous@4.11.0",
   "publishConfig": {
     "access": "public"
   },
   "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213",
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/imbhargav5/rooks/issues"
+  },
+  "readme": "ERROR: No README data found!",
+  "private": true
 }
