--- a/packages/raf/package.json
+++ b/packages/raf/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://react-hooks.org/docs/use-raf",
   "repository": {
     "type": "git",
-    "url": "https://github.com/imbhargav5/rooks.git",
+    "url": "git+https://github.com/imbhargav5/rooks.git",
     "directory": "packages/raf"
   },
   "scripts": {
@@ -28,7 +28,7 @@
     "raf"
   ],
   "version": "4.11.0",
-  "_id": "@rooks/use-raf@",
+  "_id": "@rooks/use-raf@4.11.0",
   "publishConfig": {
     "access": "public"
   },
@@ -36,5 +36,10 @@
     "raf": "3.4.1"
   },
   "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213",
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/imbhargav5/rooks/issues"
+  },
+  "readme": "ERROR: No README data found!",
+  "private": true
 }
