--- a/packages/undo-state/package.json
+++ b/packages/undo-state/package.json
@@ -9,7 +9,7 @@
   "homepage": "https://react-hooks.org/hook/use-undo-state",
   "repository": {
     "type": "git",
-    "url": "https://github.com/imbhargav5/rooks.git",
+    "url": "git+https://github.com/imbhargav5/rooks.git",
     "directory": "packages/undo-state"
   },
   "scripts": {
@@ -31,8 +31,13 @@
     "react": ">=16.8.0"
   },
   "version": "4.11.0",
-  "_id": "@rooks/use-undo-state@",
+  "_id": "@rooks/use-undo-state@4.11.0",
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/imbhargav5/rooks/issues"
+  },
+  "readme": "ERROR: No README data found!",
+  "private": true
 }
