--- a/packages/will-unmount/package.json
+++ b/packages/will-unmount/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://react-hooks.org/docs/use-will-unmount",
   "repository": {
     "type": "git",
-    "url": "https://github.com/imbhargav5/rooks.git",
+    "url": "git+https://github.com/imbhargav5/rooks.git",
     "directory": "packages/will-unmoun"
   },
   "scripts": {
@@ -29,7 +29,7 @@
     "unmount hook"
   ],
   "version": "4.11.0",
-  "_id": "@rooks/use-will-unmount@",
+  "_id": "@rooks/use-will-unmount@4.11.0",
   "publishConfig": {
     "access": "public"
   },
@@ -37,5 +37,10 @@
     "react": ">=16.8.0"
   },
   "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213",
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/imbhargav5/rooks/issues"
+  },
+  "readme": "ERROR: No README data found!",
+  "private": true
 }
