--- a/packages/window-size/package.json
+++ b/packages/window-size/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://react-hooks.org/docs/use-window-size",
   "repository": {
     "type": "git",
-    "url": "https://github.com/imbhargav5/rooks.git",
+    "url": "git+https://github.com/imbhargav5/rooks.git",
     "directory": "packages/window-size"
   },
   "scripts": {
@@ -28,7 +28,7 @@
     "window size hook"
   ],
   "version": "4.11.0",
-  "_id": "@rooks/use-window-size@",
+  "_id": "@rooks/use-window-size@4.11.0",
   "jest": {
     "globals": {
       "__DEV__": true,
@@ -44,5 +44,10 @@
     "react": ">=16.8.0"
   },
   "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213",
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/imbhargav5/rooks/issues"
+  },
+  "readme": "ERROR: No README data found!",
+  "private": true
 }
