--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Useful React hooks for everyone.",
   "scripts": {
     "clean": "lerna clean",
+    "cleanup": "lerna exec --scope=@rooks/* --concurrency 1 --stream -- rimraf lib dist",
     "commit": "cz",
     "lint": "lerna exec --stream --parallel --ignore rooks --ignore shared --ignore docusaurus --ignore eslint-config-rooks -- sh ../../scripts/lint.sh",
     "format": "yarn run prettier --write \"./packages/shared/*.+(js|jsx|ts|tsx)\"",
@@ -27,7 +28,7 @@
     "build:ci": "NODE_ENV=CI yarn run build:shared && NODE_ENV=CI yarn run build:independent:ci && NODE_ENV=CI yarn run build:independent-dts:ci && NODE_ENV=CI yarn run build:rooks",
     "build:action": "yarn run build:shared && yarn run build:independent:ci && yarn run build:independent-dts:ci && yarn run build:rooks",
     "build:custom-github-actions": "cd ./.github/actions && for d in ./*/ ; do (cd \"$d\" && npm install && npm run build); done",
-    "build:only": "yarn run build:shared --stream --parallel && yarn run build:independent --stream --parallel && yarn run build:independent-dts --stream --parallel && yarn run build:rooks  --stream --parallel",
+    "build:only": "yarn run build:rooks",
     "build": "yarn run build:only",
     "generate:changelog": "gulp changelog",
     "prerelease-version-bump": "GITHUB_SHA=$(git rev-parse HEAD | cut -c1-8);lerna version prerelease --force-publish=* --preid ${GITHUB_SHA}",
@@ -70,6 +71,7 @@
     "chalk": "2.4.2",
     "conventional-changelog-cli": "^2.1.1",
     "cz-conventional-changelog": "3.3.0",
+    "esbuild": "^0.11.12",
     "execa": "^4.1.0",
     "glob": "^7.1.6",
     "gulp": "^4.0.2",
@@ -107,11 +109,12 @@
     "replace-string": "2.0.0",
     "rollup": "^2.33.3",
     "rollup-plugin-dts": "^1.4.14",
+    "rollup-plugin-esbuild": "^4.0.1",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.29.0",
     "shelljs": "0.8.3",
-    "terser": "3",
+    "terser": "^5.6.1",
     "ts-jest": "^26.4.4",
     "tslib": "^2.0.3",
     "typescript": "^4.0.5",
