--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "clean": "lerna clean",
     "cleanup": "lerna exec --scope=@rooks/* --concurrency 1 --stream -- rimraf lib dist",
     "commit": "cz",
-    "lint": "lerna exec --stream --parallel --ignore rooks --ignore shared --ignore docusaurus --ignore eslint-config-rooks -- sh ../../scripts/lint.sh",
+    "lint": "lerna run lint --stream --parallel",
     "format": "yarn run prettier --write \"./packages/shared/*.+(js|jsx|ts|tsx)\"",
     "test": "lerna run test --scope shared",
     "coverage": "lerna run test --stream --parallel -- --coverage",
@@ -17,16 +17,8 @@
     "update-title-card": "lerna exec --scope=@rooks/* --concurrency 1 --stream -- 'node ../../helpers/update-title-card/index.js'",
     "readme-to-docs": "lerna exec --scope=@rooks/* --scope=rooks --concurrency 1 --stream -- 'node ../../helpers/docs/index.js'",
     "bs": "lerna bootstrap",
-    "prebuild": "lerna clean -y && yarn",
-    "build:independent": "lerna exec --stream --parallel --ignore rooks --ignore shared --ignore docusaurus --ignore eslint-config-rooks -- sh ../../scripts/build.sh",
-    "build:independent-dts": "lerna exec --stream --parallel --ignore rooks --ignore shared --ignore docusaurus --ignore eslint-config-rooks -- sh ../../scripts/dts-build.sh",
-    "build:independent:ci": "lerna exec --ignore rooks --ignore shared --ignore docusaurus --ignore eslint-config-rooks -- sh ../../scripts/build.sh",
-    "build:independent-dts:ci": "lerna exec --stream --parallel --ignore rooks --ignore shared --ignore docusaurus --ignore eslint-config-rooks --concurrency 4 -- sh ../../scripts/dts-build.sh",
     "build:rooks": "lerna run --scope rooks build",
     "build:docs": "lerna run --scope docusaurus build",
-    "build:shared": "lerna run --scope shared build",
-    "build:ci": "NODE_ENV=CI yarn run build:shared && NODE_ENV=CI yarn run build:independent:ci && NODE_ENV=CI yarn run build:independent-dts:ci && NODE_ENV=CI yarn run build:rooks",
-    "build:action": "yarn run build:shared && yarn run build:independent:ci && yarn run build:independent-dts:ci && yarn run build:rooks",
     "build:custom-github-actions": "cd ./.github/actions && for d in ./*/ ; do (cd \"$d\" && npm install && npm run build); done",
     "build:only": "yarn run build:rooks",
     "build": "yarn run build:only",
@@ -72,6 +64,7 @@
     "conventional-changelog-cli": "^2.1.1",
     "cz-conventional-changelog": "3.3.0",
     "esbuild": "^0.11.12",
+    "eslint": "^7.24.0",
     "execa": "^4.1.0",
     "glob": "^7.1.6",
     "gulp": "^4.0.2",
