--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
-name: Node CI Main
+name: Node CI
 
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build:
@@ -18,8 +18,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/checkout@master
-        with:
-          ref: main
       - name: Use Node.js 15.x
         uses: actions/setup-node@v1
         with:
@@ -37,8 +35,6 @@ jobs:
       - name: Install project dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true' # Over here!
         run: yarn
-      - name: build
-        run: yarn build:only
       - name: test
         run: yarn test
       - name: Generate docusaurus        
@@ -51,6 +47,5 @@ jobs:
           git add packages/docusaurus
           git -c user.name="imbhargav5" -c user.email="imbhargav5@users.noreply.github.com" \
             commit -m "Update ${{ steps.tags.outputs.new }} docusaurus [skip ci]" --no-verify --quiet
-          git pull origin main --rebase
-          git push "https://imbhargav5:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git" main      
+          git push "https://imbhargav5:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git" master      
 
