--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -30,9 +30,11 @@
     "url": "https://github.com/react-hooks-org/rooks/issues"
   },
   "dependencies": {
-    "babel-eslint": "10.0.3",
-    "eslint": "5.12.1",
-    "eslint-plugin-react": "7.12.4",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.24.0",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
